--- a/express-server/package.json
+++ b/express-server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@yayawallet/node-sdk": "^0.0.4",
     "express": "^4.19.1"
   }
 }
