--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +13,8 @@
   "dependencies": {
     "@yayawallet/node-sdk": "^0.0.6",
     "express": "^4.19.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
