--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@yayawallet/node-sdk": "^0.0.6",
+    "cors": "^2.8.5",
     "express": "^4.19.1"
   },
   "devDependencies": {
