--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: yayawallet/react-dashboard:latest, yayawallet/react-dashboard:v${{github.run_number}}
+          tags: yayawallet/react-dashboard:latest
