--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prepare": "husky",
+    "format": "prettier --log-level warn --write \"./src/**/*.{tsx,jsx,ts,js}\""
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
