--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.40.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
