--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,3 +22,4 @@ jobs:
           context: .
           push: true
           tags: yayawallet/react-dashboard:latest
+          platforms: linux/amd64,linux/arm64
