--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "recharts": "^2.12.7",
     "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
