--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
