CONSTANTS.ts: store constants files in CONSTANTS.ts

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,13 @@
 server {
     listen 80;
-    server_name localhost;  # You can set this to your domain name
+    server_name dashboard.yayawallet.com;
 
-    root /usr/share/nginx/html;  # Path to your built React app
+    root /usr/share/nginx/html;
 
-    index index.html;  # Default file to serve
+    index index.html;
 
     location / {
         try_files $uri $uri/ /index.html;  # Serve index.html for all requests
-    }
-
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|svg)$ {
-        expires 1y;  # Cache static files for 1 year
-        add_header Cache-Control "public";
     }
 
     error_page 404 /index.html;  # Serve index.html on 404
